fix: Layout shift for Select component

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,14 @@
 
 @custom-variant dark (&:is(.dark *));
 
+html {
+  @apply overflow-x-hidden;
+}
+
+
 body {
   @apply m-0;
+  @apply min-w-full;
   font-family:
     -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
